# WiseMoment

./: CMakeLists.txt  CMakePresets.json  README.md
i18n/: MomentWise_en_US.ts  MomentWise_zh_CN.ts
resources/: resources.qrc
src/: AppConfig.cpp  AppConfig.h  AudioRecorder.cpp  AudioRecorder.h  Database.cpp  Database.h  HotkeyManager_win.cpp  HotkeyManager_win.h  MainWindow.cpp  MainWindow.h  MiniBallWidget.cpp  MiniBallWidget.h  PomodoroController.cpp  PomodoroController.h  QuoteProvider.cpp  QuoteProvider.h  StatsStore.cpp  StatsStore.h  TodoCardDelegate.cpp  TodoCardDelegate.h  TodoDueDelegate.cpp  TodoDueDelegate.h  TodoModel.cpp  TodoModel.h  TrayManager.cpp  TrayManager.h  main.cpp
src/ui/: AcrylicBlur_win.cpp  AcrylicBlur_win.h  BottomNav.cpp  BottomNav.h  BreathingRing.cpp  BreathingRing.h  CustomStatusBar.cpp  CustomStatusBar.h  HeaderWidget.cpp  HeaderWidget.h  Theme.cpp  Theme.h
